# gcp-observability

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  quiz.html  study_notes.md
examples/: job_lifecycle_tracker.py  promo_key_tracker.py  trace_correlator.py
gcp_observability/: __init__.py  sync.py
gcp_observability/analysis/: __init__.py  extract.py  insights.py
gcp_observability/discovery/: __init__.py  cloud_run.py  discover.py  load_balancer.py  models.py
gcp_observability/logging/: __init__.py  client.py  constants.py  expressions.py  query.py
gcp_observability/logs/: __init__.py  trace_coverage.py
gcp_observability/queries/: __init__.py  general.py
gcp_observability/storage/: sqlite.py
tests/: test_expressions.py  test_extract.py  test_insights.py  test_query.py  test_storage.py  test_sync.py
tests/integration/: test_job_lifecycle.py  test_trace_correlator.py
